fixed stretching issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'montlight';
-  src: url('/fonts/Mont-ExtraLightDEMO.woff');
+  font-family: "montlight";
+  src: url("/fonts/Mont-ExtraLightDEMO.woff");
 }
 @font-face {
-  font-family: 'montheavy';
-  src: url('/fonts/Montserrat-ExtraBold.ttf')
+  font-family: "montheavy";
+  src: url("/fonts/Montserrat-ExtraBold.ttf");
 }
 html,
 body,
-:root{
+:root {
   height: 100%;
 }
